fixed the overlap of search tab and control

--- a/htdocs/t/cocktails.css
+++ b/htdocs/t/cocktails.css
@@ -2,9 +2,9 @@
 .b-title, #cocktail-page .b-title { padding-bottom: 11px; }
 .b-title h1, #cocktail-page .b-title h1 {font-size:20px } 
 .b-title #spotlighted .group {display:none}
-#search_tabs { overflow: hidden; margin-bottom:-1px; position:relative; }
-#search_tabs li { margin-right: 1px; float: left; background-position: -125px -100px; width: 112px; height: 21px; line-height:21px; padding: 0 3px; font-size: 11px; text-align: center; cursor: pointer;}
-#search_tabs li.selected {background-position: 0px -100px; cursor: default;}
+#search_tabs { overflow: hidden; margin-bottom:-1px; position:relative; z-index: 15; }
+#search_tabs li { margin-right: 1px; float: left; background-position: -125px -100px; width: 112px; height: 20px; line-height:21px; padding: 0 3px; font-size: 11px; text-align: center; cursor: pointer;}
+#search_tabs li.selected {background-position: 0px -100px; cursor: default; height: 21px;}
 
 #search_by_letter a {text-decoration:none; font-size: 14px;}
 #letters_all{float:left; width: 40px; text-align:center;}
@@ -12,7 +12,7 @@
 #alphabetical-ru a {margin-right: 1px; float:left; display:block; width:18px; height: 18px; line-height:15px; text-align:center; padding-left:1px;}
 #alphabetical-ru a.selected-button {background-position: -125px -125px; cursor: default; }
 
-#search_by_ingreds { z-index: 10; position: relative; }
+.search-control { z-index: 10; position: relative; }
 .autocomplete { display: none; position: absolute; opacity: 0.9; border-width: 0px 1px 1px 1px; font-size: 14px; }
 .autocomplete .item { padding: 2px 0 4px 5px; cursor: pointer; }
 .search-error{display:none;height:12px;}
